fix spacing

--- a/client/components/home/Menu.scss
+++ b/client/components/home/Menu.scss
@@ -8,7 +8,7 @@
   .menu {
     //height: 100vh;
     width: 100vw;
-    margin-top: 110px;
+    margin-top: 130px;
     margin-left: 0;
     margin-right: 0;
     float: left;
@@ -42,7 +42,7 @@
   .menu {
     //height: 100vh;
     width: 100vw;
-    margin-top: 89px;
+    margin-top: 110px;
     margin-left: 0;
     margin-right: 0;
     float: left;
@@ -72,7 +72,7 @@
   .menu {
     //height: 100vh;
     width: 100vw;
-    margin-top: 89px;
+    margin-top: 110px;
     margin-left: 0;
     margin-right: 0;
     float: left;
