--- a/client/components/home/Search.scss
+++ b/client/components/home/Search.scss
@@ -22,7 +22,7 @@
         border-bottom : 1px solid #DBDBDB;
         position:fixed;
         z-index:100; 
-        margin-top:110px;
+        margin-top:130px;
         background-color: white;
        
     }
@@ -81,7 +81,7 @@
         border-bottom : 1px solid #DBDBDB;
         position:fixed;
         z-index:100; 
-        margin-top:89px;
+        margin-top:110px;
         background-color: white;
        
     }
@@ -139,7 +139,7 @@
         border-bottom : 1px solid #DBDBDB;
         position:fixed;
         z-index:100; 
-        margin-top:89px;
+        margin-top:110px;
         background-color: white;
        
     }
